// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Alignment 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 goUzMG"
  >
    <div
      className="Box-s1nrm5q2-0 gWaevY"
    >
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        align="left"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 kuKyFI"
    >
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        align="center"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 ekhFAK"
    >
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        align="right"
      </code>
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Backgrounds 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 goUzMG"
  >
    <div
      className="Box-s1nrm5q2-0 eZcPGz"
    >
      With 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        background="primary"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 iaHXgf"
    >
      With 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        background="secondary"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 kKusg"
    >
      With 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        background="success"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 cHLvxU"
    >
      With 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        background="danger"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 Lnjlw"
    >
      With 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        background="muted"
      </code>
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 goUzMG"
  >
    <div
      className="Box-s1nrm5q2-0 goUzMG"
    >
      Basic example
    </div>
    <div
      className="Box-s1nrm5q2-0 knjmJf"
    >
      With 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        gutterX="base" gutterY="smallest"
      </code>
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Border 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 juZIns"
  >
    Box with 
    <code
      className="Code-s18nyp7m-0 hjoPbf"
    >
      border
    </code>
  </div>
</div>
`;

exports[`Storyshots Box Colors 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 goUzMG"
  >
    <div
      className="Box-s1nrm5q2-0 goUzMG"
    >
      Basic example
    </div>
    <div
      className="Box-s1nrm5q2-0 eRdqYZ"
      color="primary"
    >
      Basic example (primary)
    </div>
    <div
      className="Box-s1nrm5q2-0 Gqwff"
      color="secondary"
    >
      Basic example (secondary)
    </div>
    <div
      className="Box-s1nrm5q2-0 biOILD"
      color="success"
    >
      Basic example (success)
    </div>
    <div
      className="Box-s1nrm5q2-0 iPkHcZ"
      color="danger"
    >
      Basic example (danger)
    </div>
    <div
      className="Box-s1nrm5q2-0 diHvZW"
      color="muted"
    >
      Basic example (muted)
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Levels 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 goUzMG"
  >
    <div
      className="Box-s1nrm5q2-0 bGhGjn"
    >
      The quick brown fox jumps over the lazy dog
    </div>
    <div
      className="Box-s1nrm5q2-0 cEnONV"
    >
      The quick brown fox jumps over the lazy dog
    </div>
    <div
      className="Box-s1nrm5q2-0 jObxWc"
    >
      The quick brown fox jumps over the lazy dog
    </div>
    <div
      className="Box-s1nrm5q2-0 ebaCRg"
    >
      The quick brown fox jumps over the lazy dog
    </div>
    <div
      className="Box-s1nrm5q2-0 cdtOwZ"
    >
      The quick brown fox jumps over the lazy dog
    </div>
    <div
      className="Box-s1nrm5q2-0 Dpvlm"
    >
      The quick brown fox jumps over the lazy dog
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Weights 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 goUzMG"
  >
    <div
      className="Box-s1nrm5q2-0 eLvlpt"
    >
      Example Box using 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        weight="lighter"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 mlZvd"
    >
      Example Box using 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        weight="normal"
      </code>
    </div>
    <div
      className="Box-s1nrm5q2-0 irVegi"
    >
      Example Box using 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        weight="bold"
      </code>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="ButtonPanel-ovkzl-0 ejpSHT"
    >
      <button
        className="Button-s1srdffo-0 hUxorT"
        type="button"
      >
        Default
      </button>
      <button
        className="Button-s1srdffo-0 cLgDaV"
        type="button"
      >
        Primary
      </button>
      <button
        className="Button-s1srdffo-0 gVkBJZ"
        type="button"
      >
        Secondary
      </button>
      <button
        className="Button-s1srdffo-0 jJQubz"
        type="button"
      >
        Success
      </button>
      <button
        className="Button-s1srdffo-0 cWgVmd"
        type="button"
      >
        Danger
      </button>
      <button
        className="Button-s1srdffo-0 eYQfim"
        type="button"
      >
        Light
      </button>
      <button
        className="Button-s1srdffo-0 hqSpOF"
        type="button"
      >
        Dark
      </button>
      <button
        className="Button-s1srdffo-0 hFNdAJ"
        type="button"
      >
        Link
      </button>
    </div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Set "Stage background" knob to dark to see light variations
    </p>
  </div>
</div>
`;

exports[`Storyshots Button Block-level 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="ButtonPanel-ovkzl-0 ejpSHT"
    >
      <button
        className="Button-s1srdffo-0 fKKYbd"
        type="button"
      >
        Default
      </button>
      <button
        className="Button-s1srdffo-0 gsTopv"
        type="button"
      >
        Primary
      </button>
      <button
        className="Button-s1srdffo-0 lyhkl"
        type="button"
      >
        Secondary
      </button>
      <button
        className="Button-s1srdffo-0 csdKDi"
        type="button"
      >
        Success
      </button>
      <button
        className="Button-s1srdffo-0 dHNYyx"
        type="button"
      >
        Danger
      </button>
      <button
        className="Button-s1srdffo-0 emXGXy"
        type="button"
      >
        Light
      </button>
      <button
        className="Button-s1srdffo-0 jwUWVU"
        type="button"
      >
        Dark
      </button>
      <button
        className="Button-s1srdffo-0 dcTAcy"
        type="button"
      >
        Link
      </button>
    </div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Set "Stage background" knob to dark to see light variations
    </p>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="ButtonPanel-ovkzl-0 ejpSHT"
    >
      <button
        className="Button-s1srdffo-0 hUxorT"
        disabled={true}
        type="button"
      >
        Default
      </button>
      <button
        className="Button-s1srdffo-0 cLgDaV"
        disabled={true}
        type="button"
      >
        Primary
      </button>
      <button
        className="Button-s1srdffo-0 gVkBJZ"
        disabled={true}
        type="button"
      >
        Secondary
      </button>
      <button
        className="Button-s1srdffo-0 jJQubz"
        disabled={true}
        type="button"
      >
        Success
      </button>
      <button
        className="Button-s1srdffo-0 cWgVmd"
        disabled={true}
        type="button"
      >
        Danger
      </button>
      <button
        className="Button-s1srdffo-0 eYQfim"
        disabled={true}
        type="button"
      >
        Light
      </button>
      <button
        className="Button-s1srdffo-0 hqSpOF"
        disabled={true}
        type="button"
      >
        Dark
      </button>
      <button
        className="Button-s1srdffo-0 hFNdAJ"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Link
      </button>
    </div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Set "Stage background" knob to dark to see light variations
    </p>
  </div>
</div>
`;

exports[`Storyshots ButtonPanel Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="ButtonPanel-ovkzl-0 hQjWpQ"
  >
    <button
      className="Button-s1srdffo-0 hUxorT"
      type="button"
    >
      Default
    </button>
    <button
      className="Button-s1srdffo-0 cLgDaV"
      type="button"
    >
      Primary
    </button>
    <button
      className="Button-s1srdffo-0 gVkBJZ"
      type="button"
    >
      Secondary
    </button>
    <button
      className="Button-s1srdffo-0 jJQubz"
      type="button"
    >
      Success
    </button>
    <button
      className="Button-s1srdffo-0 cWgVmd"
      type="button"
    >
      Danger
    </button>
    <button
      className="Button-s1srdffo-0 hFNdAJ"
      type="button"
    >
      Link
    </button>
  </div>
</div>
`;

exports[`Storyshots Callout Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="Callout-mttm4f-0 ZhdNC"
    >
      <h2
        className="Heading__Heading2-bds1vi-1 fLJvPN"
      >
        Callout - Primary style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 hKbcnT"
    >
      <h2
        className="Heading__Heading2-bds1vi-1 fLJvPN"
      >
        Callout - Primary style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 WuoUl"
    >
      <h2
        className="Heading__Heading2-bds1vi-1 fLJvPN"
      >
        Callout - Danger style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 dHRhPe"
    >
      <h2
        className="Heading__Heading2-bds1vi-1 fLJvPN"
      >
        Callout - Success style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
    <div
      className="Callout-mttm4f-0 bqAedm"
    >
      <h2
        className="Heading__Heading2-bds1vi-1 fLJvPN"
      >
        Callout - Dark style
      </h2>
      <p
        className="Paragraph-s1qmbsem-0 hiwcSy"
        spacing="smallest"
      >
        This is some example content
      </p>
      <p
        className="Paragraph-s1qmbsem-0 dGiWwC"
        spacing="smallest"
      >
        It draws some attention to it relative to surrounding content
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Code Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    This is an in-line 
    <code
      className="Code-s18nyp7m-0 hjoPbf"
    >
      code example
    </code>
  </div>
</div>
`;

exports[`Storyshots Container Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="Container-g414mt-0 fvDRLG"
    >
      Hello Container 1
    </div>
    <div
      className="Container-g414mt-0 fvDRLG"
    >
      Hello Container 2
    </div>
    <div
      className="Container-g414mt-0 hrpHli"
    >
      This container has custom max widths for different screen size. Try resizing the browser window!
    </div>
  </div>
</div>
`;

exports[`Storyshots Error Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <p
    className="Error-s1vyvhq8-0 kcaAmM"
  >
    Basic example
  </p>
</div>
`;

exports[`Storyshots Examples Form Validation 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    <form
      className="Form-s152rqk0-0 jCBAIU"
      onSubmit={[Function]}
    >
      <fieldset
        className="s1nrm5q2-0-fieldset-Box-jLJQJw iRPYcj"
      >
        <div
          className="Flex-s8l8zm-1 fuadQC"
        >
          <div
            className="Flex__Item-s8l8zm-0 ifwxop"
          >
            <legend
              className="bds1vi-3-legend-Heading__Heading4-brhaBC hbKnRC"
            >
              Personal information
            </legend>
          </div>
        </div>
        <div
          className="Flex-s8l8zm-1 fuadQC"
        >
          <div
            className="Flex__Item-s8l8zm-0 iHUsqO"
          >
            <div
              className="Field-w8gztl-0 jNJaXY"
            >
              <label
                className="Label-wn7l1e-0 kBnUBg"
                htmlFor="givenNames"
              >
                Given names
              </label>
              <input
                aria-describedby="givenNamesErrors"
                className="Input-n2s9mv-0 TcINU"
                id="givenNames"
                name="givenNames"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
          <div
            className="Flex__Item-s8l8zm-0 iHUsqO"
          >
            <div
              className="Field-w8gztl-0 jNJaXY"
            >
              <label
                className="Label-wn7l1e-0 kBnUBg"
                htmlFor="lastName"
              >
                Last name
              </label>
              <input
                aria-describedby="lastNameErrors"
                className="Input-n2s9mv-0 TcINU"
                id="lastName"
                name="lastName"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        className="s1nrm5q2-0-fieldset-Box-jLJQJw iRPYcj"
      >
        <div
          className="Flex-s8l8zm-1 fuadQC"
        >
          <div
            className="Flex__Item-s8l8zm-0 ifwxop"
          >
            <legend
              className="bds1vi-3-legend-Heading__Heading4-brhaBC hbKnRC"
            >
              Billing address
            </legend>
          </div>
        </div>
        <div
          className="Field-w8gztl-0 hBSmPd"
          spacing="smaller"
        >
          <label
            className="Label-wn7l1e-0 kBnUBg"
            htmlFor="addressLine1"
          >
            Street address
          </label>
          <input
            aria-describedby="addressLine1Errors"
            className="Input-n2s9mv-0 TcINU"
            id="addressLine1"
            name="addressLine1"
            onChange={[Function]}
            value=""
          />
        </div>
        <div
          className="Field-w8gztl-0 dOdphz"
        >
          <input
            aria-describedby="addressLine2Errors"
            className="Input-n2s9mv-0 TcINU"
            id="addressLine2"
            name="addressLine2"
            onChange={[Function]}
            value=""
          />
        </div>
        <div
          className="Flex-s8l8zm-1 fuadQC"
        >
          <div
            className="Flex__Item-s8l8zm-0 iHUsqO"
          >
            <div
              className="Field-w8gztl-0 dOdphz"
            >
              <label
                className="Label-wn7l1e-0 kBnUBg"
                htmlFor="city"
              >
                Town or city
              </label>
              <input
                aria-describedby="cityErrors"
                className="Input-n2s9mv-0 TcINU"
                id="city"
                name="city"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
          <div
            className="Flex__Item-s8l8zm-0 ifwxop"
          >
            <div
              className="Field-w8gztl-0 dOdphz"
            >
              <label
                className="Label-wn7l1e-0 kBnUBg"
                htmlFor="postCode"
              >
                Postcode
              </label>
              <input
                aria-describedby="postCodeErrors"
                className="Input-n2s9mv-0 TcINU"
                id="postCode"
                name="postCode"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="Field-w8gztl-0 jNJaXY"
        >
          <label
            className="Label-wn7l1e-0 kBnUBg"
            htmlFor="country"
          >
            Country
          </label>
          <input
            aria-describedby="countryErrors"
            className="Input-n2s9mv-0 TcINU"
            id="country"
            name="country"
            onChange={[Function]}
            value=""
          />
        </div>
      </fieldset>
      <div
        className="Field-w8gztl-0 dOdphz"
      >
        <div
          className="Switch__Container-s1fnj0mp-3 kbGToR"
        >
          <input
            aria-describedby="marketingErrors"
            checked={true}
            className="Switch__Control-s1fnj0mp-2 cAFEQu"
            name="marketing"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="Switch__Label-s1fnj0mp-1 kHmlbX"
          >
            <div
              className="Switch__Status-s1fnj0mp-0 kJuQgk"
            />
            <div
              className="Switch__Content-s1fnj0mp-4 cJHJXh"
            >
              Would you like to receive occasional emails with offers and product announcements?
            </div>
          </label>
        </div>
      </div>
      <div
        className="ButtonPanel-ovkzl-0 jOmgch"
      >
        <button
          className="Button-s1srdffo-0 hFNdAJ"
          onClick={[Function]}
          type="button"
        >
          Reset
        </button>
        <button
          className="Button-s1srdffo-0 cLgDaV"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Examples Using with downshift 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
    onClick={[Function]}
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="n2s9mv-0-Input-eXLwAq koXfnw"
      id="downshift-input-2"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Favorite color?"
      role="combobox"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Field Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    <div
      className="Field-w8gztl-0 rOvtQ"
    >
      <div>
        <label
          className="Label-wn7l1e-0 kBnUBg"
        >
          Street
        </label>
        <span
          className="Text-s8nfma1-0 ixIiuR"
          color="muted"
        >
          Must be a U.S. address
        </span>
      </div>
      <input
        className="Input-n2s9mv-0 TcINU"
        defaultValue="742 Evergreen Terrace"
      />
      <input
        className="Input-n2s9mv-0 TcINU"
        defaultValue=""
      />
      <p
        className="Error-s1vyvhq8-0 kcaAmM"
      >
        This is not a valid address
      </p>
    </div>
    <div
      className="Field-w8gztl-0 brSsWP"
    >
      <label
        className="Label-wn7l1e-0 kBnUBg"
      >
        Town or suburb
      </label>
      <input
        className="Input-n2s9mv-0 TcINU"
        defaultValue="Springfield"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots FieldSet Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <fieldset
    className="s1nrm5q2-0-fieldset-Box-jLJQJw iRPYcj"
  >
    Basic example
  </fieldset>
</div>
`;

exports[`Storyshots Flex Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    <div
      className="Flex-s8l8zm-1 kgSxTB"
      direction="row"
      wrap="wrap"
    >
      <div
        className="Flex__Item-s8l8zm-0 ifwxop"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          First example
          <br />
          Has two lines
        </p>
      </div>
      <div
        className="Flex__Item-s8l8zm-0 ifwxop"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Second example
        </p>
      </div>
      <div
        className="Flex__Item-s8l8zm-0 ifwxop"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Third example
        </p>
      </div>
      <div
        className="Flex__Item-s8l8zm-0 kRYbLp"
        order={-1}
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Fourth example
        </p>
      </div>
      <div
        className="Flex__Item-s8l8zm-0 iHUsqO"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Fifth example
        </p>
      </div>
      <div
        className="Flex__Item-s8l8zm-0 ifwxop"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Sixth example
        </p>
      </div>
      <div
        className="Flex__Item-s8l8zm-0 ifwxop"
      >
        <p
          className="Paragraph-s1qmbsem-0 hiwcSy"
          spacing="smallest"
        >
          Seventh example
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <form
    className="Form-s152rqk0-0 jCBAIU"
  >
    Basic example
  </form>
</div>
`;

exports[`Storyshots Heading Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <h1
      className="Heading__Heading1-bds1vi-0 hIKXcA"
    >
      The quick brown fox jumps over the lazy dog
    </h1>
    <h2
      className="Heading__Heading2-bds1vi-1 fLJvPN"
    >
      The quick brown fox jumps over the lazy dog
    </h2>
    <h3
      className="Heading__Heading3-bds1vi-2 hTibWs"
    >
      The quick brown fox jumps over the lazy dog
    </h3>
    <h4
      className="Heading__Heading4-bds1vi-3 PeJVO"
    >
      The quick brown fox jumps over the lazy dog
    </h4>
    <h5
      className="Heading__Heading5-bds1vi-4 fCKeZC"
    >
      The quick brown fox jumps over the lazy dog
    </h5>
    <h6
      className="Heading__Heading6-bds1vi-5 cWHLlc"
    >
      The quick brown fox jumps over the lazy dog
    </h6>
  </div>
</div>
`;

exports[`Storyshots Input Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <input
    className="Input-n2s9mv-0 TcINU"
  />
</div>
`;

exports[`Storyshots Input Disabled 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <input
    className="Input-n2s9mv-0 iSaqdt"
    disabled={true}
    value="cannot edit me!"
  />
</div>
`;

exports[`Storyshots Input Inline 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s8l8zm-1 fuadQC"
  >
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <input
        className="Input-n2s9mv-0 hTZkre"
      />
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <input
        className="Input-n2s9mv-0 hTZkre"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Validation 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s8l8zm-1 cFAGpQ"
    direction="column"
  >
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <input
        className="Input-n2s9mv-0 feLGKW"
        defaultValue="I am valid"
      />
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <input
        className="Input-n2s9mv-0 SvraW"
        defaultValue="I am invalid"
      />
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <input
        className="Input-n2s9mv-0 hfkXjF"
        defaultValue="I am disabled. Validation not shown."
        disabled={true}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <label
    className="Label-wn7l1e-0 kBnUBg"
  >
    Basic example
  </label>
</div>
`;

exports[`Storyshots Legend Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <legend
    className="bds1vi-3-legend-Heading__Heading4-brhaBC hbKnRC"
  >
    Basic example
  </legend>
</div>
`;

exports[`Storyshots Link Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s8l8zm-1 bLknKK"
  >
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 fcljDw"
        href="#"
      >
        No appearance
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 fBeUOM"
        href="#"
      >
        Default
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 cHzbQE"
        href="#"
      >
        Primary
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 bfMrYA"
        href="#"
      >
        Secondary
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 iEeHxe"
        href="#"
      >
        Success
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 fDzeWY"
        href="#"
      >
        Danger
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 hUwACL"
        href="#"
      >
        Light
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 enafBc"
        href="#"
      >
        Dark
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 fNFxrh"
        href="#"
      >
        Link
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link Block-level 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s8l8zm-1 cFAGpQ"
    direction="column"
  >
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 BqjIt"
        href="#"
      >
        No appearance
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 kuvIka"
        href="#"
      >
        Default
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 gguRWB"
        href="#"
      >
        Primary
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 dksWnv"
        href="#"
      >
        Secondary
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 hCkinq"
        href="#"
      >
        Success
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 kULvTI"
        href="#"
      >
        Danger
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 IbGR"
        href="#"
      >
        Light
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 ckaRKj"
        href="#"
      >
        Dark
      </a>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <a
        className="Link-s1mfj9j3-0 kNhoJw"
        href="#"
      >
        Link
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Paragraph Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      This is sample text in a paragraph
    </p>
    <p
      className="Paragraph-s1qmbsem-0 dGiWwC"
      spacing="smallest"
    >
      This is a flush paragraph that has no margin
    </p>
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      This is another paragraph
    </p>
  </div>
</div>
`;

exports[`Storyshots Pre Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <pre
    className="Pre-s1txlaan-0 decRQZ"
  >
    package main

import "fmt"

func main() {
	fmt.Println("Hello world")
}
  </pre>
</div>
`;

exports[`Storyshots ProgressBar Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-ai7x4l-0 dnbHPC"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-ai7x4l-0 jFaGd"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-ai7x4l-0 iUhamh"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-ai7x4l-0 cvfXGW"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={42}
      className="ProgressBar-ai7x4l-0 gijSLV"
      max={100}
      min={0}
      role="progressbar"
      value={42}
    />
  </div>
</div>
`;

exports[`Storyshots Readable Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Readable-s106xs6s-0 GWqSM"
  >
    Readable has its width limited for readability on larger screens. On smaller screens, it reverts to take up 100% width. Try resizing your window to see the effect.
  </div>
</div>
`;

exports[`Storyshots Select Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Select__Container-v7zbvw-0 kuvvkm"
    disabled={undefined}
  >
    <select
      className="Select__Control-v7zbvw-3 gZkPLa"
    >
      <option
        value=""
      >
        Select your favourite super hero
      </option>
      <option
        value="wonder-woman"
      >
        Wonder woman
      </option>
      <option
        value="batman"
      >
        Batman
      </option>
      <option
        value="superman"
      >
        Superman
      </option>
      <option
        value="iron-man"
      >
        Iron man
      </option>
    </select>
    <div
      className="Select__Accessory-v7zbvw-1 cNvZnX"
    >
      <svg
        className="Select__Chevron-v7zbvw-2 fuWQGj"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="3"
        viewBox="0 0 24 24"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Disabled 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Select__Container-v7zbvw-0 jQnXw"
    disabled={true}
  >
    <select
      className="Select__Control-v7zbvw-3 gZkPLa"
      disabled={true}
    >
      <option
        value=""
      >
        You can't open me!
      </option>
      <option
        value="wonder-woman"
      >
        Wonder woman
      </option>
      <option
        value="batman"
      >
        Batman
      </option>
      <option
        value="superman"
      >
        Superman
      </option>
      <option
        value="iron-man"
      >
        Iron man
      </option>
    </select>
    <div
      className="Select__Accessory-v7zbvw-1 cNvZnX"
    >
      <svg
        className="Select__Chevron-v7zbvw-2 fuWQGj"
        fill="none"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="3"
        viewBox="0 0 24 24"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Inline 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <div
      className="Flex-s8l8zm-1 ikrlVQ"
      wrap="wrap"
    >
      <div
        className="Flex__Item-s8l8zm-0 ifwxop"
      >
        <div
          className="Select__Container-v7zbvw-0 iVeICc"
          disabled={undefined}
        >
          <select
            className="Select__Control-v7zbvw-3 cYzruK"
          >
            <option
              value=""
            >
              Select your favourite super hero
            </option>
            <option
              value="wonder-woman"
            >
              Wonder woman
            </option>
            <option
              value="batman"
            >
              Batman
            </option>
            <option
              value="superman"
            >
              Superman
            </option>
            <option
              value="iron-man"
            >
              Iron man
            </option>
          </select>
          <div
            className="Select__Accessory-v7zbvw-1 cNvZnX"
          >
            <svg
              className="Select__Chevron-v7zbvw-2 fuWQGj"
              fill="none"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="3"
              viewBox="0 0 24 24"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Flex__Item-s8l8zm-0 ifwxop"
      >
        <div
          className="Select__Container-v7zbvw-0 iVeICc"
          disabled={undefined}
        >
          <select
            className="Select__Control-v7zbvw-3 cYzruK"
          >
            <option
              value=""
            >
              Select your favourite food
            </option>
            <option
              value="pizza"
            >
              Pizza
            </option>
            <option
              value="pasta"
            >
              Pasta
            </option>
            <option
              value="salad"
            >
              Salad
            </option>
            <option
              value="steak"
            >
              Steak
            </option>
          </select>
          <div
            className="Select__Accessory-v7zbvw-1 cNvZnX"
          >
            <svg
              className="Select__Chevron-v7zbvw-2 fuWQGj"
              fill="none"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="3"
              viewBox="0 0 24 24"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Validation 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Flex-s8l8zm-1 fuadQC"
  >
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <div
        className="Select__Container-v7zbvw-0 euxpSg"
        disabled={undefined}
      >
        <select
          className="Select__Control-v7zbvw-3 gZkPLa"
        >
          <option
            value=""
          >
            Select your favourite super hero
          </option>
          <option
            value="wonder-woman"
          >
            Wonder woman
          </option>
          <option
            value="batman"
          >
            Batman
          </option>
          <option
            value="superman"
          >
            Superman
          </option>
          <option
            value="iron-man"
          >
            Iron man
          </option>
        </select>
        <div
          className="Select__Accessory-v7zbvw-1 cNvZnX"
        >
          <svg
            className="Select__Chevron-v7zbvw-2 fuWQGj"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="3"
            viewBox="0 0 24 24"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <div
        className="Select__Container-v7zbvw-0 cwTSP"
        disabled={undefined}
      >
        <select
          className="Select__Control-v7zbvw-3 gZkPLa"
        >
          <option
            value=""
          >
            Select your favourite super hero
          </option>
          <option
            value="wonder-woman"
          >
            Wonder woman
          </option>
          <option
            value="batman"
          >
            Batman
          </option>
          <option
            value="superman"
          >
            Superman
          </option>
          <option
            value="iron-man"
          >
            Iron man
          </option>
        </select>
        <div
          className="Select__Accessory-v7zbvw-1 cNvZnX"
        >
          <svg
            className="Select__Chevron-v7zbvw-2 fuWQGj"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="3"
            viewBox="0 0 24 24"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="Flex__Item-s8l8zm-0 ifwxop"
    >
      <div
        className="Select__Container-v7zbvw-0 jQnXw"
        disabled={true}
      >
        <select
          className="Select__Control-v7zbvw-3 gZkPLa"
          disabled={true}
        >
          <option
            value=""
          >
            Invalid but disabled so no color
          </option>
          <option
            value="wonder-woman"
          >
            Wonder woman
          </option>
          <option
            value="batman"
          >
            Batman
          </option>
          <option
            value="superman"
          >
            Superman
          </option>
          <option
            value="iron-man"
          >
            Iron man
          </option>
        </select>
        <div
          className="Select__Accessory-v7zbvw-1 cNvZnX"
        >
          <svg
            className="Select__Chevron-v7zbvw-2 fuWQGj"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="3"
            viewBox="0 0 24 24"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Switch Checkboxes 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 kpqszB"
  >
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Switch can be used as checkboxes with 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        type="checkbox"
      </code>
    </p>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s1fnj0mp-3 kbGToR"
      >
        <input
          className="Switch__Control-s1fnj0mp-2 cAFEQu"
          id="example"
          name="check1"
          type="checkbox"
        />
        <label
          className="Switch__Label-s1fnj0mp-1 kHmlbX"
        >
          <div
            className="Switch__Status-s1fnj0mp-0 kJuQgk"
          />
          <div
            className="Switch__Content-s1fnj0mp-4 cJHJXh"
          >
            This can be toggled
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s1fnj0mp-3 kbGToR"
      >
        <input
          className="Switch__Control-s1fnj0mp-2 cAFEQu"
          id="example2"
          name="check1"
          type="checkbox"
        />
        <label
          className="Switch__Label-s1fnj0mp-1 kHmlbX"
        >
          <div
            className="Switch__Status-s1fnj0mp-0 kJuQgk"
          />
          <div
            className="Switch__Content-s1fnj0mp-4 cJHJXh"
          >
            So can this one
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 jNJaXY"
    >
      <div
        className="Switch__Container-s1fnj0mp-3 kbGToR"
      >
        <input
          className="Switch__Control-s1fnj0mp-2 cAFEQu"
          disabled={true}
          id="example3"
          name="check1"
          type="checkbox"
        />
        <label
          className="Switch__Label-s1fnj0mp-1 kHmlbX"
        >
          <div
            className="Switch__Status-s1fnj0mp-0 kJuQgk"
          />
          <div
            className="Switch__Content-s1fnj0mp-4 cJHJXh"
          >
            But this one is disabled
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Switch Radios 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="Box-s1nrm5q2-0 kpqszB"
  >
    <p
      className="Paragraph-s1qmbsem-0 hiwcSy"
      spacing="smallest"
    >
      Switch can be used as radios with 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        type="radios"
      </code>
    </p>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s1fnj0mp-3 kbGToR"
      >
        <input
          className="Switch__Control-s1fnj0mp-2 cAFEQu"
          id="example4"
          name="radio1"
          type="radio"
        />
        <label
          className="Switch__Label-s1fnj0mp-1 kHmlbX"
        >
          <div
            className="Switch__Status-s1fnj0mp-0 kJuQgk"
          />
          <div
            className="Switch__Content-s1fnj0mp-4 cJHJXh"
          >
            This can be selected
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s1fnj0mp-3 kbGToR"
      >
        <input
          className="Switch__Control-s1fnj0mp-2 cAFEQu"
          id="example5"
          name="radio1"
          type="radio"
        />
        <label
          className="Switch__Label-s1fnj0mp-1 kHmlbX"
        >
          <div
            className="Switch__Status-s1fnj0mp-0 kJuQgk"
          />
          <div
            className="Switch__Content-s1fnj0mp-4 cJHJXh"
          >
            So can this one
          </div>
        </label>
      </div>
    </div>
    <div
      className="Field-w8gztl-0 dOdphz"
    >
      <div
        className="Switch__Container-s1fnj0mp-3 kbGToR"
      >
        <input
          className="Switch__Control-s1fnj0mp-2 cAFEQu"
          disabled={true}
          id="example6"
          name="radio1"
          type="radio"
        />
        <label
          className="Switch__Label-s1fnj0mp-1 kHmlbX"
        >
          <div
            className="Switch__Status-s1fnj0mp-0 kJuQgk"
          />
          <div
            className="Switch__Content-s1fnj0mp-4 cJHJXh"
          >
            But this one is disabled
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SystemFontStack Basic 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div
    className="SystemFontStack-s1ry2lqk-0 lcrENz"
  >
    This text should be rendered using your system font
  </div>
</div>
`;

exports[`Storyshots Text Alignment 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <span
      className="Text-s8nfma1-0 djepN"
    >
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        align="left"
      </code>
    </span>
    <span
      className="Text-s8nfma1-0 hYyjcP"
    >
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        align="center"
      </code>
    </span>
    <span
      className="Text-s8nfma1-0 iccdDT"
    >
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        align="right"
      </code>
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Colors 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <span
      className="Text-s8nfma1-0 bifwBh"
    >
      Basic example
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 fjQxCW"
      color="primary"
    >
      Basic example (primary)
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 fdxAUv"
      color="secondary"
    >
      Basic example (secondary)
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 dSMyuf"
      color="success"
    >
      Basic example (success)
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 ixhjbv"
      color="danger"
    >
      Basic example (danger)
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 ixIiuR"
      color="muted"
    >
      Basic example (muted)
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Levels 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <span
      className="Text-s8nfma1-0 ddCViF"
    >
      The quick brown fox jumps over the lazy dog
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 liOpqi"
    >
      The quick brown fox jumps over the lazy dog
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 hdJVLr"
    >
      The quick brown fox jumps over the lazy dog
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 aXXwI"
    >
      The quick brown fox jumps over the lazy dog
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 gZfFgJ"
    >
      The quick brown fox jumps over the lazy dog
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 gMKjqT"
    >
      The quick brown fox jumps over the lazy dog
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Weights 1`] = `
<div
  className="SystemFontStack-s1ry2lqk-0 lcrENz"
>
  <div>
    <span
      className="Text-s8nfma1-0 kaRvde"
    >
      Example text using 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        weight="lighter"
      </code>
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 hjfiIW"
    >
      Example text using 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        weight="normal"
      </code>
    </span>
    <br />
    <span
      className="Text-s8nfma1-0 blHUul"
    >
      Example text using 
      <code
        className="Code-s18nyp7m-0 hjoPbf"
      >
        weight="bold"
      </code>
    </span>
  </div>
</div>
`;
